--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,9 @@ nav:
             - Vertragsarten: einfuehrung/wirtschaft/vertragsarten.md
             - Zahlungsmöglichkeiten: einfuehrung/wirtschaft/zahlungsmoeglichkeiten.md
         - Lernzettel Abschlussprüfung: einfuehrung/lernzettel/index.md
+        - Urheberrecht bei Bildern: 
+            - Urheberrecht & Persönlichkeitsrechte: einfuehrung/urheberrecht/bildrechte.md
+            - Verwertungsrechte: einfuehrung/urheberrecht/verwertungsrechte.md
         - Hilfsmittel: einfuehrung/hilfsmittel.md
     - Datenschutz: datenschutz.md
     - Impressum: impressum.md
