Serien mit Bezug zu GLAM hinzugefügt

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,7 @@ nav:
             - Urheberrecht & Persönlichkeitsrechte: einfuehrung/urheberrecht/bildrechte.md
             - Verwertungsrechte: einfuehrung/urheberrecht/verwertungsrechte.md
         - Hilfsmittel: einfuehrung/hilfsmittel.md
+    - GLAM in Serien: /varia/glam-serien.md
     - IT:
         - Excel: it/excel.md
     - Nachschlagewerke: 
