"Kulturelels Erbe" statt "GLAM"

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
             - Urheberrecht & Persönlichkeitsrechte: einfuehrung/urheberrecht/bildrechte.md
             - Verwertungsrechte: einfuehrung/urheberrecht/verwertungsrechte.md
         - Hilfsmittel: einfuehrung/hilfsmittel.md
-    - GLAM in Serien: /varia/glam-serien.md
+    - Kulturelles Erbe in Serien: /varia/kulturelles-erbe-serien.md
     - IT:
         - Excel: it/excel.md
     - Nachschlagewerke: 
