--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,7 +96,8 @@ markdown_extensions:
     - mdx_truly_sane_lists
     - pymdownx.highlight:
         anchor_linenums: true
-        use_pygments: true
+    - pymdownx.inlinehilite
+    - pymdownx.superfences
     - pymdownx.keys
 plugins:
     - search:
